objects/NegotiationProduct__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK("/" &amp;  Negotiation__r.Account__c ,  Negotiation__r.Account__r.Name )</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiation</label>
        <referenceTo>Negotiation__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Negotiations_and_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product Record Type must be [Investor]</errorMessage>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Investor</value>
            </filterItems>
            <infoMessage>Please select an Investor Product</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Negotiations</relationshipLabel>
        <relationshipName>Negotiations_and_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Negotiation and Product</label>
    <nameField>
        <displayFormat>NP-{000000}</displayFormat>
        <label>Negotiation and Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiations and Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>